bk_ida/gccida/c0/emit_reload_insns
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7640:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].reg_rtx)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7641:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v61 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].reg_rtx)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7716:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].reg_rtx)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7717:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v55 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].reg_rtx)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7816:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].reg_rtx)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7817:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v48 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].reg_rtx)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7916:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].out)] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7917:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v36 = mode_class_0[( unsigned __int8)BYTE2( *( _DWORD *)rld[r].out)] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7944:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v42 = ( rtx)insn[2]; 
            ^~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:7955:17: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
src_reg = ( rtx)v41[1]; 
                ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:8008:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( mode_class_0[rld[r].mode] != MODE_COMPLEX_INT ) 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/reload1.c:8009:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v40 = mode_class_0[rld[r].mode] == MODE_COMPLEX_FLOAT; 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
12 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/emit_reload_insns/src/obj/reload1.o] Error 1
